--- a/appendix_lammpsrant.tex
+++ b/appendix_lammpsrant.tex
@@ -28,4 +28,4 @@ Auf der einen Seite ist die Stabilität der Worker unabhängig von anderen Worke
 Stattdessen werden fehlgeschlagene MD-Simulationen erneut gestartet und bei wiederholtem Berechnungsfehler als fehlgeschlagen markiert und verworfen.
 
 Vom Hostprozess werden für statistische Auswertungen Zähler der erfolgreichen und fehlerhaften MD-Simulationen geführt, mit denen Fehlerraten mit Prozess- und Struktureigenschaften korreliert werden können.
-Eine Anwendung davon befindet sich in Abbildung \ref{fig:copperparsivald}.
+Eine Anwendung davon befindet sich in Abbildung~\ref{fig:copperparsivald}.
