--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -9,7 +9,7 @@ Typischerweise deuten Wachstumsdefekte auf geringe Relaxationszeiten, geringe Sp
 Das folgende System wurde bei \SI{500}{\kelvin} mit \SI{5.4}{\electronvolt} Auftreffenergie pro Teilchen für \SI{1.2}{\nano\second} relaxiert.
 Die Auftreffenergie wird jedoch hauptsächlich Teil vom Thermostat abgefangen, so dass sie mit \SI{5.4}{\electronvolt} eigentlich zu niedrig liegt.
 
-Als Resultat bilden sich Poren (Abbildung \ref{fig:multilayer_surfacefail}), die sich vergleichbar zu den Kupferkratern in Abbildung \ref{fig:coppercrater} entwickeln, sich aber erst spät wieder schließen.
+Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die sich vergleichbar zu den Kupferkratern in Abbildung~\ref{fig:coppercrater} entwickeln, sich aber erst spät wieder schließen.
 
 \begin{figure}[h]
   \centering
@@ -19,7 +19,7 @@ Als Resultat bilden sich Poren (Abbildung \ref{fig:multilayer_surfacefail}), die
 \end{figure}
 
 \clearpage
-Abbildung \ref{fig:multilayer_columnfail} zeigt ein gleichartiges Resultat, das mit denselben Parametern erzeugt wurde.
+Abbildung~\ref{fig:multilayer_columnfail} zeigt ein gleichartiges Resultat, das mit denselben Parametern erzeugt wurde.
 Hier ist erkennbar, wie sich die gebildeten Poren wieder schließen.
 Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil abgebildet.
 
@@ -35,7 +35,7 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{CuNi_thicklayers}
-    \caption{Profil eines Systemes nach 6 Lagen je \SI{5}{\nano\meter}}
+    \caption{Profil eines Systemes nach 6 Lagen je \SI{6}{\nano\meter}}
     \label{fig:multilayer_thickfail}
   \end{subfigure}
 \end{figure}
@@ -43,5 +43,5 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
 \section{Multilagen mit einer Dicke von 5 nm}
 
 Ergänzend wurden auch Untersuchungen an Schichten mit Lagendicken begonnen, die sich mehr an experimentellen Werten von mehreren Nanometern orientieren.
-Abbildung \ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für die notwendige Optimierung der Simulationsparameter nicht weiter untersucht wurde.
-Aus diesem Grund sind auch Krater- und Porenbildungen zu beobachten, die erwartungsgemäß mit Eingabe der optimalen Werte aus Kapitel \ref{multilayer} eliminiert werden.
+Abbildung~\ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für die notwendige Optimierung der Simulationsparameter nicht weiter untersucht wurde.
+Aus diesem Grund sind auch Krater- und Porenbildungen zu beobachten, die erwartungsgemäß mit Eingabe der optimalen Werte aus Kapitel~\ref{multilayer} eliminiert werden.
