--- a/appendix_silicon.tex
+++ b/appendix_silicon.tex
@@ -3,21 +3,21 @@
 
 \section{Voruntersuchungen}
 
-\begin{figure}
+\begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{SiSi_npt_bondlengths}
   \caption[Bindungslängen von Kupfer im relaxierten Kristall für verschiedene Parametersätze]{Bindungslängen von Kupfer im relaxierten Kristall für verschiedene Parametersätze}
   \label{fig:sisibondlengths}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{kulkarni_rdf_crystal}
   \caption[Radiale Verteilungsfunktion von kristallinem Silizium nach Relaxation mit Kulkarni-Parametersatz]{Radiale Verteilungsfunktion von kristallinem Silizium nach Relaxation mit Kulkarni-Parametersatz}
   \label{fig:kulkarnirdf}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
   \centering
   \includegraphics[width=\textwidth]{kulkarni_rdf_amorphous}
   \caption[Radiale Verteilungsfunktion von amorphem Silizium nach Relaxation mit Kulkarni-Parametersatz]{Radiale Verteilungsfunktion von amorphem Silizium nach Relaxation mit Kulkarni-Parametersatz}
@@ -50,9 +50,10 @@
   \end{threeparttable}
 \end{table}
 
+\clearpage
 \section{Precursorsimulationen}
 
-\begin{figure}
+\begin{figure}[h]
 
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
@@ -76,7 +77,7 @@
 
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
@@ -101,7 +102,7 @@
 
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 
   \captionsetup[subfigure]{singlelinecheck=false}
   \begin{subfigure}[t]{4cm}
