--- a/literature.bib
+++ b/literature.bib
@@ -15,6 +15,16 @@
 	file = {ALD_Review_2005.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2E677H5R/ALD_Review_2005.pdf:application/pdf}
 }
 
+@article{gosalvez_atomistic_2008,
+	title = {Atomistic methods for the simulation of evolving surfaces},
+	volume = {18},
+	journal = {Journal of Micromechanics and Microengineering},
+	author = {Gosálvez, M. A. and Xing, Y. and Sato, K. and Nieminen, R. M.},
+	year = {2008},
+	pages = {055029},
+	file = {Gosálvez et al. - 2008 - Atomistic methods for the simulation of evolving s.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ITNMFRHV/Gosalvez et al. - 2008 - Atomistic methods for the simulation of evolving s.pdf:application/pdf}
+}
+
 @misc{plimpton_lammps_2014,
 	title = {{LAMMPS} Project},
 	url = {http://lammps.sandia.gov/},
@@ -523,4 +533,21 @@
 	keywords = {Molecular dynamics, Transport properties},
 	pages = {3684--3690},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/KTMSI26J/Berendsen et al. - 1984 - Molecular dynamics with coupling to an external ba.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WIIUC26P/1.html:text/html}
+}
+
+@article{dynys_alpha_1982,
+	title = {Alpha Alumina Formation in Alum-Derived Gamma Alumina},
+	volume = {65},
+	issn = {1551-2916},
+	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1151-2916.1982.tb10511.x/abstract},
+	doi = {10.1111/j.1151-2916.1982.tb10511.x},
+	abstract = {The formation of alpha alumina in gamma alumina obtained from ammonium alum was studied at 1150°C. The transformation occurs by a nucleation and growth process, preceded by an incubation time. Mechanical treatments of the gamma alumina markedly increase the density of nuclei and hence the transformation rate. The alpha alumina forms in porous colonies consisting of a single crystal with an interconnected wormy morphology.},
+	number = {9},
+	urldate = {2014-11-04},
+	journal = {Journal of the American Ceramic Society},
+	author = {Dynys, F.w. and Halloran, J. W.},
+	month = sep,
+	year = {1982},
+	pages = {442--448},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6MC6V4BF/Dynys and Halloran - 1982 - Alpha Alumina Formation in Alum-Derived Gamma Alum.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/74C8BQJB/abstract.html:text/html}
 }
