--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -2,7 +2,7 @@
 \label{copperpvd}
 
 Mit Kupfer-PVD wurde ein zweiter Metall-PVD-Prozess auf Parsivald angepasst und unter der Zielsetzung simuliert, die Anwendbarkeit verschiedener Potentialparametrisierungen zu prüfen.
-Der Prozess ähnelt dem Gold-Prozess in seinen Parametern, jedoch konnten viele verschiedene Parametersätze für Kupferoberflächen, -schmelzen und  und -legierungen gefunden werden, von denen einige Hinweise auf die Nicht-Darstellbarkeit der reinen Metallsysteme enthalten\cite{mendelev_development_2009}\cite{mendelev_using_2007}.
+Der Prozess ähnelt dem Gold-Prozess in seinen Parametern, jedoch konnten viele verschiedene Parametersätze für Kupferoberflächen, -schmelzen und -legierungen gefunden werden, von denen einige Hinweise auf die Nicht-Darstellbarkeit der reinen Metallsysteme enthalten\cite{mendelev_development_2009}\cite{mendelev_using_2007}.
 
 Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersätze notwendig, anhand derer Kandidaten für Parsivald für vollständige Abscheidungssimulationen gesucht werden.
 
@@ -30,13 +30,13 @@ Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersä
 \subsection{Voruntersuchungen}
 
 Als Vorbetrachtung für die Anwendbarkeit in Abscheidungssimulationen wurden Koordinationszahlen, Bindungslängen und Dichten mit allen Parametersätzen ermittelt und mit experimentellen Daten verglichen.
-Die Ergebnisse stimmen im Allgemeinen gut mit experimentellen Werten überein (Tabelle \ref{tab:copperpreresults}), zeigt aber für cu\_ag\_ymwu.eam.alloy eine Abweichung in der Bindungslänge von \SI{3.25}{\percent}, die zu einer Dichteabweichung von \SI{10.4}{\percent} führt.
+Die Ergebnisse stimmen im Allgemeinen gut mit experimentellen Werten überein (Tabelle~\ref{tab:copperpreresults}), zeigt aber für cu\_ag\_ymwu.eam.alloy eine Abweichung in der Bindungslänge von \SI{3.25}{\percent}, die zu einer Dichteabweichung von \SI{10.4}{\percent} führt.
 Die meisten anderen Parametersätze unterschätzen die Bindungslänge nur leicht, mit Ausnahme der mit LAMMPS vertriebenen Dateien, welche ideale strukturelle Eigenschaften produzieren.
 Diese wurden in den weiteren Simulationen aufgrund der guten strukturellen Übereinstimmung sowie ihrer Bewährtheit in Kombination mit LAMMPS zu Rate gezogen.
 
-Mit den Parameterdateien wird der Schmelzpunkt stark überschätzt, mit Ausnahme von cu\_ag\_ymwu.eam.alloy, die den Schmelzpunkt um 300K unterschätzt (Abbildung \ref{fig:copperthermo}).
+Mit den Parameterdateien wird der Schmelzpunkt stark überschätzt, mit Ausnahme von cu\_ag\_ymwu.eam.alloy, die den Schmelzpunkt um 300K unterschätzt (Abbildung~\ref{fig:copperthermo}).
 Hier zeigt sich die Eigenschaft der Molekulardynamik, jeweils nur für ein enges Anwendungsgebiet passende Ergebnisse zu liefern.
-Wie Tabelle \ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Parametersätze nicht für thermodynamische Untersuchungen angepasst und unterstützen diese somit nicht offiziell, doch werden solche extremen Temperaturen in den durchgeführten Simulationen ohnehin nicht erreicht.
+Wie Tabelle~\ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Parametersätze nicht für thermodynamische Untersuchungen angepasst und unterstützen diese somit nicht offiziell, doch werden solche extremen Temperaturen in den durchgeführten Simulationen ohnehin nicht erreicht.
 
 \begin{table}
   \begin{threeparttable}
@@ -127,11 +127,11 @@ Bereits nach wenigen Ereignissen sinkt die Abbruchrate auf \SI{3}{\percent}, was
 Die kritische Bedeckung dafür liegt zwischen \SI{0.034}{\per\nano\meter\squared} und \SI{0.074}{\per\nano\meter\squared} und deckt sich somit mit der maximalen MD-Ereignisdichte von \SI{0.073}{\per\nano\meter\squared}.
 Das deutet darauf hin, dass perfekte Gitterkonfigurationen nicht robust gegenüber gerichteten Energieeinträgen sind, kleine Störungen des Gitters aber zur gleichmäßigeren Verteilung der eingebrachten Energien auf die umliegenden Atome führen.
 
-Im weiteren Verlauf der Simulation liegt die Abbruchrate unterhalb von \SI{2}{\percent} (Abbildung \ref{fig:copperparsivald-a}), unterliegt aber weiteren Schwankungen, die mit der RMS-Rauheit korrelieren (Abbildung \ref{fig:copperparsivald-c}), welche durch Unebenheiten der Oberfläche auf der Nanometer-Skala dominiert wird.
+Im weiteren Verlauf der Simulation liegt die Abbruchrate unterhalb von \SI{2}{\percent} (Abbildung~\ref{fig:copperparsivald-a}), unterliegt aber weiteren Schwankungen, die mit der RMS-Rauheit korrelieren (Abbildung~\ref{fig:copperparsivald-c}), welche durch Unebenheiten der Oberfläche auf der Nanometer-Skala dominiert wird.
 Mit einem nahezu konstanten RMS-Wert um \SI{1}{\angstrom} sind die gewachsenen Schichten durchgehend glatt, mit Ausnahme einzelner Simulationen.
 
-Eines der untersuchten Cu\_u3.eam-Systeme bildet ab Schritt 70 einen \SI{2.6}{\nano\meter} breiten und \SI{3.0}{\nano\meter} tiefen Krater aus, der schließlich zu einem \SI{1}{\nano\meter} großen \todo{void}Einschluss abgeschlossen wird (Abbildung \ref{fig:coppercrater}).
-Die Auswirkungen dieses Kraters auf die Rauheit sind klar in Abbildung \ref{fig:copperparsivald-c} als stetige Zunahme, gefolgt von einer schlagartigen Abnahme in Schritt 96, und in den Abbruchraten (Abbildung \ref{fig:copperparsivald-a}) als Anstieg zwischen den Schritten 60 und 90 erkennbar, beeinflussen aber nicht die Wachstumsrate (Abbildung \ref{fig:copperparsivald-b}).
+Eines der untersuchten Cu\_u3.eam-Systeme bildet ab Schritt 70 einen \SI{2.6}{\nano\meter} breiten und \SI{3.0}{\nano\meter} tiefen Krater aus, der schließlich zu einem \SI{1}{\nano\meter} großen \todo{void}Einschluss abgeschlossen wird (Abbildung~\ref{fig:coppercrater}).
+Die Auswirkungen dieses Kraters auf die Rauheit sind klar in Abbildung~\ref{fig:copperparsivald-c} als stetige Zunahme, gefolgt von einer schlagartigen Abnahme in Schritt 96, und in den Abbruchraten (Abbildung~\ref{fig:copperparsivald-a}) als Anstieg zwischen den Schritten 60 und 90 erkennbar, beeinflussen aber nicht die Wachstumsrate (Abbildung~\ref{fig:copperparsivald-b}).
 Das gleiche Verhalten zeigt sich in weiteren Simulationen auch für die anderen Parametersätze und ist nicht auf Cu\_u3.eam begrenzt.
 
 \begin{figure}
@@ -176,7 +176,7 @@ Das gleiche Verhalten zeigt sich in weiteren Simulationen auch für die anderen 
 \end{figure}
 
 \subsubsection{Maximale Ereignisdichte}
-Ergänzend ist in Abbildung \ref{fig:copperparsivald-d} ein Histogramm der Zahl paralleler Ereignisse dargestellt.
+Ergänzend ist in Abbildung~\ref{fig:copperparsivald-d} ein Histogramm der Zahl paralleler Ereignisse dargestellt.
 Die maximale Oberflächendichte der Ereignisse liegt bei der gewählten MD-Box-Größe von \SI{37x37}{\angstrom} bei \SI{0.073}{\per\nano\meter\squared}.
 Dem stehen beobachtete Maxima von \num{12} aktiven Ereignissen gegenüber, die einer Dichte von \SI{0.03}{\per\nano\meter\squared} und somit \SI{40}{\percent} maximaler Bedeckung entsprechen, wobei im Schnitt nur \num{5.3} Worker aktiv sind, was einer mittleren Bedeckung von \SI{18.5}{\percent} entspricht.
-Die Bedeckungsdichten für Systeme unterschiedlicher Größe wurden bereits in Tabelle \ref{tab:goldscalability} für Gold-Abscheidungen aufgelistet und zeigen ähnliche Werte für kleine Systeme, können für Substrate auf der Mikrometer-Skala mangels Rechenleistung jedoch nicht \todo{phrasing}aufrecht erhalten werden.
+Die Bedeckungsdichten für Systeme unterschiedlicher Größe wurden bereits in Tabelle~\ref{tab:goldscalability} für Gold-Abscheidungen aufgelistet und zeigen ähnliche Werte für kleine Systeme, können für Substrate auf der Mikrometer-Skala mangels Rechenleistung jedoch nicht \todo{phrasing}aufrecht erhalten werden.
